[package]
name = "kusama-github-bot"
version = "0.0.1"
authors = ["Amar Singh <asinghchrony@protonmail.com>, David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
dirs = "3.0.1"
env_logger = "0.7.1"
ipld-block-builder = "0.4.1"
log = "0.4.11"
sunshine-bounty-gbot = { git = "https://github.com/sunshine-protocol/sunshine-bounty" }
kb-client = { path = "../client" }
substrate-subxt = "0.11.0"
tokio = { version = "0.2.22", default-features = false, features = ["macros"] }
