[package]
name = "kb-client"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[features]
mock = [
    "sunshine-client-utils/mock",
]

[dependencies]
async-trait = "0.1.36"
ipld-block-builder = "0.4.1"
libipld = { version = "0.3.1", default-features = false }
substrate-subxt = "0.11.0"
sunshine-bounty-client = { git = "https://github.com/sunshine-protocol/sunshine-bounty" }
sunshine-bounty-utils =  { git = "https://github.com/sunshine-protocol/sunshine-bounty" }
sunshine-client-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
kb-test-node = { path = "../node" }

# workaround subxt event decoding
sunshine-faucet-client = { git = "https://github.com/sunshine-protocol/sunshine-identity" }
sunshine-identity-client = { git = "https://github.com/sunshine-protocol/sunshine-identity" }
