[package]
name = "kusama-bounty-demo"
version = "0.0.1"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
env_logger = "0.7.1"
kb-client = { path = "../client", features = ["mock"] }
sunshine-cli-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }